--- a/app/src/main/res/drawable/complete.xml
+++ b/app/src/main/res/drawable/complete.xml
@@ -2,9 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
     <stroke
-        android:width="2dp"
-        android:color="#898F89"/>
-    <size android:width="30dp" android:height="30dp"/>
+        android:width="1dp"
+        android:color="#4CAF50"/>
+    <size android:width="25dp" android:height="25dp"/>
     <solid
-        android:color="@color/white"/>
+        android:color="#4CAF50"/>
 </shape>
