--- a/app/src/main/res/drawable/round_button.xml
+++ b/app/src/main/res/drawable/round_button.xml
@@ -4,9 +4,7 @@
     <stroke
         android:width="1dp"
         android:color="#4CAF50"/>
-
-    <corners android:radius="8dp"/>
-
+    <size android:width="25dp" android:height="25dp"/>
     <solid
         android:color="@color/white"/>
 </shape>
