--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,16 +4,26 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
-   <androidx.recyclerview.widget.RecyclerView
-       android:layout_width="wrap_content"
-       android:layout_height="wrap_content"
-       tools:listitem="@layout/stepper_row_item"
-       android:orientation="horizontal"
-       android:layout_marginLeft="15dp"
-       android:layout_marginRight="15dp"
-       app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-       android:id="@+id/stepRV"/>
+      <androidx.recyclerview.widget.RecyclerView
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          tools:listitem="@layout/stepper_row_item"
+          android:orientation="horizontal"
+          android:layout_marginLeft="15dp"
+          android:layout_marginRight="15dp"
+          app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+          android:id="@+id/stepRV"/>
+
+      <Button
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:text="Next"
+          android:layout_marginTop="20dp"
+          android:id="@+id/nextID"/>
+
+
 
 </LinearLayout>
