--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,7 @@
       <Button
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
-          android:text="Next"
+          android:text="Save"
           android:layout_marginTop="20dp"
           android:id="@+id/nextID"/>
 
