--- a/app/src/main/res/layout/stepper_row_item.xml
+++ b/app/src/main/res/layout/stepper_row_item.xml
@@ -10,12 +10,12 @@
     </data>
 
     <androidx.cardview.widget.CardView
-        android:layout_width="wrap_content"
+        android:layout_width="80dp"
         android:layout_height="50dp"
         >
 
         <RelativeLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:paddingTop="10dp"
             android:paddingBottom="10dp"
